--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
- Location Test
+ SafeOnHighways
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
- Locatino
+ Location
  </ion-content>
